# bonfire-web-client

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CODEOWNERS  CODESTYLE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.sh  README.md  SECURITY.md  SETUP.md  SETUP_DEV.sh  bannar.py  dadas  index.html  test-doc.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  ⚠️-vulnerability-⚠️.md
docs/0.1-beta/: http-uris.md  rich-messages.md
localisation/: localisation.md
localisation/en-US/: ui.yaml
localisation/english-SIMPLIFIED/: CREDITS.wul  ui.wul  ui.yaml
localisation/english-UWU/: ui.wul
localisation/tokipona/: ui.yml
misc/: README.md  allowed-markdown.md  badge-template.xcf  basic-ui-mockuop.html  list of stuff.md  readme-badges.html  settings.md
misc/"clicky" or UI effects (copy)/: README.md
misc/bonfire_data_package/: PLAINER_README.txt  README.txt
misc/bonfire_data_package/messages/: guid.csv
misc/bonfire_data_package/profile/: account.json
misc/defult_sounds/: ATLAS.md
src/: backend.rs  commands.py  commands_core.py  connection_handler.rs  content-fetcher.rs  database.rs  main.rs  signup.html  structs.rs  style.css  webapp nextline.rs  webapp.rs
src/commands/: _callbacks.py  _template_commented.py  _template_nocomment.py  argparse.copy.py  commands.py  commands_core.py  commands_header.py  default_commands.py  gifbot.py  kaomoji.py  pluralbot.py  secrets.py
src/css/: core.css  layout.css  style.css  style.proof-of-transparancy.css
(+2 files in other folders)
