[package]
name = "codename_bonfire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
rocket = "0.4.11"
# json = "0.12.4"
rsa = "0.8.1"
aes-gcm-siv = "0.11.1"
getrandom = { version = "0.2", features = ["js"] }
# rocket = "0.5.0-rc.2"
rand = "0.8.5"